<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">



    <!--전체 레이아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <!--아이콘 레이아웃-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <!--아이콘-->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_patient"
                tools:ignore="ContentDescription">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/patient_name" />


                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">


                    <EditText
                        android:id="@+id/patient_name"
                        style="@style/FieldStyle"
                        tools:ignore="TextFields" />


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="성별 :"
                    tools:ignore="HardcodedText"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <Spinner
                        android:id="@+id/spinner_gender"
                        android:layout_height="48dp"
                        android:layout_width="wrap_content"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"
                        android:paddingEnd="16dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="병실 호수 :"
                    tools:ignore="HardcodedText" />


                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">


                    <EditText
                        android:id="@+id/patient_room_num"
                        android:inputType="number"
                        style="@style/FieldStyle" />

                    <TextView
                        android:text="@string/room_num"
                        style="@style/UnitsStyle" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="보호자 번호 :"
                    tools:ignore="HardcodedText" />


                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">


                    <EditText
                        android:id="@+id/patient_phone_num"
                        android:inputType="number"
                        style="@style/FieldStyle"
                        tools:ignore="TextFields" />



                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/purifier_key_title" />


                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">


                    <EditText
                        android:id="@+id/purifier_key"
                        style="@style/FieldStyle"
                        android:inputType="" />


                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

        <!--버튼 레이아웃-->
        <LinearLayout
            android:id="@+id/tabButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:fillViewport="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_tab"
            android:gravity="center"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/imageButton"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_patient_info"
                    android:tint="@color/bb_tabletRightBorderDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:textAlignment="center"
                    android:text="환자정보"
                    android:tint="@color/colorPrimaryDark">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/imageButton2"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_medicine_info"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="약 정보"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>





</RelativeLayout>